jquery Basic Method and Dom Traversal Method1

--- a/jquery11_firstChildLastChild.html
+++ b/jquery11_firstChildLastChild.html
@@ -20,7 +20,7 @@
     <script>
     $(document).ready(function(){
         //span의 첫 번째 자식 요소와 마지막 자식 요소에 배경색을 딥핑크로 설정
-        
+        $("span:first-child, span:last-child").css("background-color", "deeppink");
     });    
     </script>
 </body>
