--- a/jquery16_formControlSelector.html
+++ b/jquery16_formControlSelector.html
@@ -41,7 +41,51 @@
    //아이디, 이름, 암호, 암호확인을 입력하고, #regBtn을 누르면
    //데이터의 유효성을 검사하도록 하고, 그 데이터를 ajaxJoin.do로
    //비동기방식으로 보내도록 하시오.
-       
+        var pass = "no";
+        $("#regBtn").click(function() {
+            $(":text, :password").each(function() {
+                if($(this).val() == "") {
+                    alert("입력 데이터가 비어 있습니다.");
+                    $(this).focus();
+                    return false;
+                } else {
+                    pass = "yes";
+                }
+            });
+
+            if($("#pwd").val() != $("#pwdConfirm").val()) {
+                alert("비밀번호가 서로 다릅니다.");
+                pass = "no";
+                return false;
+            }
+
+            confirm();
+        });
+
+        function confirm() {
+            if(pass == "yes") {
+                source = {
+                    "id" : $("#userId").val(),
+                    "pw" : $("#pwd").val(),
+                    "name" : $("#userName").val(),
+                };
+                $.ajax({
+                    url:"/JoinPro.do?member=" + source,
+                    type:"get",
+                    dataType:"json",        // javascript 데이터 타입을 의미 -> json
+                    success:function(data) {    // ajax가 성공할때 함수
+                        $("#msg").text(data);
+                    },
+                    error:function(res, status, err) {       // ajax가 실패할때 함수 : status=상태, err=코드
+                        alert(res + "가 " + err + " 로 인하여 정상적으로 처리되지 못했습니다.");
+                    }
+                })
+            }
+        }
+
+        $("#userName").click(function() {
+            $(this).val("");
+        });
     });    
     </script>
 </body>
