제이쿼리 추가 학습

--- a/jquery29_selectorChildren.html
+++ b/jquery29_selectorChildren.html
@@ -17,10 +17,16 @@
     <script>
     $(function(){
         //아이디가 btn1인 버튼을 누르면
+        $("#btn1").on("click", function() {
         //div 요소에 아래 테두리선 3px solid red를 적용하고, 그 자식요소 중에서 span 요소의 글자크기를 3배 크게 적용
+            $("div").css("border-bottom", "3px solid red").children("span").css("font-size", "3em");
         //div 요소에 배경색 핑크로 하고, 그 자식요소 중에서 .sel 인 요소의 글자색을 빨강색으로 설정
+            $("div").css("background-color", "pink").find(".sel").css("color", "red");      // .find(값) : 부모 태그안에 해당 값을 가진 것들만 찾아라
+        });
         //아이디가 btn2인 버튼을 누르면 div의 내용 중에서 span 요소를 제거
-
+        $("#btn2").on("click", function() {
+            $("div").contents().remove("span");     // contents() -> 부모 태그 안에 내용을 불러옴
+        });
     });    
     </script>
 </head>
