--- a/jquery31_selectorParents.html
+++ b/jquery31_selectorParents.html
@@ -15,9 +15,17 @@
     <script>
     $(document).ready(function(){
         //문서가 로딩되면, b 요소의 조상에 해당하는 요소의 태그들을 모두 배열로 저장한 후 b 요소의 자식요소로 추가하여 설정
-
+        var arr = new Array();
+        $("b").parents().each(function(i){
+            arr[i] = this.tagName;
+        });
+        $("b").append(arr.reverse().join(", "));
         //문서가 로딩되면, u 요소의 부모에 해당하는 요소에 글자색을 빨강으로 하시오.
-
+        var par = new Array();
+        $("u").parent().css("color", "red").each(function(i){
+            par[i] = this.tagName;
+        });
+        $("u").append(par);
     });    
     </script>
 </head>
