--- a/jquery36_elementsReplace.html
+++ b/jquery36_elementsReplace.html
@@ -4,31 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jQuery 32 : 선택자의 후손 요소</title>
+    <title>jQuery 36 : 엘리먼트 변경하기</title>
     <script src="./js/code.jquery.com_jquery-1.12.4.js"></script> 
     <style>
     .container { clear:both; width:1000px; margin:20px auto; } 
     .container:after { content:""; display:block; clear:both; }
     .data { clear: both; }
     .data:after { content:""; display:block; clear:both; }
+    .bd { border: 2px solid red;  }
+    .box { border:2px dashed blue; }
     </style>
     <script>
     $(document).ready(function(){
-        //p 요소를 클릭하면, 클릭된 요소 후손 중에서 em 요소에 대한 글자색을 빨강으로 하고, 배경색은 핑크색으로 설정
-        $("p").on("click", function() {
-            $(this).find("em").css({"color" : "red", "background-color" : "pink"});
+        //.box요소를 클릭하면, 클릭된 요소를 "<h1 class='bd'>Replace Text1</h1>"로 변경
+        $(".box").click(function(){
+            $(this).replaceWith("<h1 class='bd'>Replace Text1</h1>");
         });
-    });    
+    });
     </script>
 </head>
 <body>
     <section class="container">
-        <h1>선택자 후손 요소 선택 메소드 - find()</h1>
+        <h1>엘리먼트 변경 메소드 - replaceWith()</h1>
         <article class="data">
-            <div> p 엘리먼트 중에서 <em> 이태릭 단어의 </em>  </div> 
-            <p> 글자 <b> <em>색</em> </b> 을 <em> 빨간색으로 </em>변경한다.</p> 
-            <p> 글자 <strong> <em>색</em> </strong> 을 <em> 빨간색으로 </em>변경한다.</p>
+            <div class="box one">Youngeun's</div>
+            <div class="box two">jQuery</div>
+            <div class="box three">Mobile</div>
+            <div class="box four">Story</div>
         </article>
     </section><br><hr><br>
+    <div class="indata1">데이터1</div>
 </body>
 </html>
